# BiliRoaming

./: .gitignore  .gitmodules  AGENTS.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.circleci/: config.yml
.github/: dependabot.yml  issue-close-app.yml
.github/ISSUE_TEMPLATE/: ----.md  --bug.md  bug_report.yml  config.yml  feature_request.yml  new_server.yml
.github/workflows/: Manual Construct.yml  PR.yml  android.yml  release.yml  telegram.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/debug/assets/: xposed_init
app/src/main/: AndroidManifest.xml
app/src/main/assets/: t2cn.txt  xhook.js  xposed_init
app/src/main/jni/: CMakeLists.txt  biliroaming.cc
app/src/main/res/drawable/: bg_search_preference.xml  ic_clear.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_search.xml
app/src/main/res/layout/: cdn_speedtest_item.xml  custom_button.xml  custom_subtitle.xml  custom_subtitle_dialog.xml  customize_backup_dialog.xml  cutomize_backup_dialog.xml  cutomize_danmaku_config_dialog.xml  danmaku_filter_dialog.xml  dialog_argb_color_choose.xml  dialog_color_choose.xml  feature.xml  home_filter_dialog.xml  load_outside_danmaku.xml  search.xml  search_bar.xml  search_result_item.xml  seekbar_dialog.xml  video_choose.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml  styles.xml
docs/: cdn_test.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+203 files in other folders)
